--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "main": "fun.js",
   "devDependencies": {
-    "tape": "~2.4.0"
+    "tape": "~2.4.0",
+    "karma": "^0.12.0",
+    "karma-sauce-launcher": "^0.2.3",
+    "karma-jasmine": "^0.2.2",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-mocha": "~0.1"
   },
   "testling": {
     "files": "test/*.js",
@@ -19,6 +26,6 @@
     ]
   },
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "karma start karma.conf-ci.js"
   }
 }
